--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,8 @@ app-movie-details{
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-image: url("https://wallpaperaccess.com/full/2693485.jpg");
+    background-size: cover;
 }
 .title{
     font-size: 40px;
@@ -52,4 +54,9 @@ ul{
 a{
     text-decoration: none;
     color: black;
+}
+img{
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
 }
